Correcao nas entidades; Criação do template; Correcao do PhaseListener; Criação do ManagerBean Cidade;

--- a/semeru_jsf_mavem/src/main/webapp/resources/main.xhtml
+++ b/semeru_jsf_mavem/src/main/webapp/resources/main.xhtml
@@ -2,28 +2,53 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:p="http://primefaces.org/ui"
+      ><!-- xmlns:sec="http://www.springframework.org/security/facelets/tags" -->
 
     <h:head>
+        <title>Semeru - Curso de JSF e Maven</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link href="./css/default.css" rel="stylesheet" type="text/css" />
-        <link href="./css/cssLayout.css" rel="stylesheet" type="text/css" />
-        <title>Facelets Template</title>
+        <link href="./../resources/restrict/css/semeru.css" rel="stylesheet" type="text/css" />
+        <link href="./../resources/restrict/images/favicon.ico" rel="shortcut icon" type="image/x-icon" />    
     </h:head>
 
     <h:body>
 
-        <div id="top">
-            <ui:insert name="top">Top</ui:insert>
+        <div id="topo">
+            <a href="http://www.semeru.com.br/"><div id="logotipo"></div></a>
+        </div>  
+
+        <div id="menu"><!-- Menu ########################################## Menu-->
+            <h:form>    
+                <p:menubar styleClass="labelmenu">
+
+                    <p:submenu label="Cadastros">  
+                        <p:menuitem value="Cidades" url="/restrict/cadastrarcidade.faces"/>                        
+                        <p:menuitem value="Pessoas" url="/restrict/cadastrarpessoas.faces"/>                        
+                    </p:submenu> 
+                    <p:submenu label="Consultas">  
+                        
+                    </p:submenu>                                      
+                </p:menubar> 
+            </h:form>           
         </div>
 
-        <div id="content" class="center_content">
-            <ui:insert name="content">Content</ui:insert>
+        <!-- Menu ########################################## Menu -->
+
+        <div id="tarefas">
+            <ui:insert name="tarefas"></ui:insert>
         </div>
 
-        <div id="bottom">
-            <ui:insert name="bottom">Bottom</ui:insert>
-        </div>
+        <div id="rodape">
+            <a href="http://www.semeru.com.br/"><img src="./../resources/restrict/images/logo_mini.png" /></a>
+
+            <div id="copyright">                  
+                <a href="http://www.semeru.com.br/">Semeru - Curso de Java Server Faces com Hibernate, Maven e Spring Security - &copy; Copyright semeru.com.br 2012</a>
+            </div>
+        </div> <!--Fim da div rodape -->
 
     </h:body>
 
